Fix layout on Safari and add responsive feed

--- a/static_workspace/scss/modules/_login.scss
+++ b/static_workspace/scss/modules/_login.scss
@@ -9,6 +9,7 @@
 
   .login-col {
     width: 50%;
+    height: 100%;
 
     @include respond-to('screen-xs') {
       width: 100%;
