--- a/static_workspace/scss/modules/_timeline.scss
+++ b/static_workspace/scss/modules/_timeline.scss
@@ -2,19 +2,37 @@
 
 .timeline-container {
   @include margin(null auto null auto);
-  @include padding(50px null 50px null);
   display: flex;
   flex-direction: row;
+
+  @include respond-to('screen-xs') {
+    @include padding(5% null 5% null);
+  }
+
+  @include respond-to('screen-sm') {
+    @include padding(50px null 50px null);
+  }
 
   &__sidebar {
     position: fixed;
     border-right-width: 4px;
     border-style: solid;
     border-color: $green;
-    width: 25%;
     @include padding(null 10px 50px null);
     font-size: em(12px);
     text-align: right;
+
+    @include respond-to('screen-xs') {
+      display: none;
+    }
+
+    @include respond-to('screen-sm') {
+      width: 15%;
+    }
+
+    @include respond-to('screen-md') {
+      width: 25%;
+    }
 
     ul {
       li {
@@ -35,17 +53,30 @@
   }
 
   &__content {
-    margin-left: calc(25% + 15px);
-    width: 50%;
-    padding-left: 25px;
+    @include respond-to('screen-xs') {
+      margin-left: 5%;
+      width: 90%;
+    }
+
+    @include respond-to('screen-sm') {
+      margin-left: calc(15% + 15px);
+      width: 70%;
+      padding-left: 25px;
+    }
+
+    @include respond-to('screen-md') {
+      margin-left: calc(25% + 15px);
+      width: 50%;
+    }
 
     .news-container {
       &__entrie {
         background-color: $white;
         border-radius: 10px;
-        height: 220px;
+        min-height: 220px;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         box-shadow: 0 6px 15px rgba(36,37,38,0.08);
         @include transition-duration(.3s);
         cursor: pointer;
@@ -57,26 +88,30 @@
         &:nth-child(odd) {
           .news-container__col-img {
             img {
-              @include border-left-radius(10px);
+              @include respond-to('screen-sm') {
+                @include border-left-radius(10px);
+              }
             }
           }
         }
 
         &:nth-child(even) {
           .news-container__col {
-            order: 2;
+            @include respond-to('screen-sm') {
+              &:first-child {
+                order: 2;
+              }
 
-            &:first-child {
-              order: 2;
-            }
-
-            &:last-child {
-              order: 1;
+              &:last-child {
+                order: 1;
+              }
             }
 
             &-img {
               img {
-                @include border-right-radius(10px);
+                @include respond-to('screen-sm') {
+                  @include border-right-radius(10px);
+                }
               }
             }
           }
@@ -87,7 +122,7 @@
         }
 
         &-txt {
-          height: inherit;
+          min-height: inherit;
 
           .news-container__col {
             width: 100% !important;
@@ -95,24 +130,44 @@
         }
 
         &-img {
+          height: 220px;
+
           .news-container__col {
             width: 100% !important;
 
             &-img {
               img {
                 border-radius: 10px;
+                height: 220px !important;
               }
             }
           }
         }
 
         .news-container__col {
-          width: 50%;
           display: flex;
           align-items: center;
 
+          @include respond-to('screen-xs') {
+            width: 100%;
+          }
+
+          @include respond-to('screen-sm') {
+            width: 50%;
+          }
+
           &-img {
-            height: 100%;
+            position: relative;
+            width: 100%;
+            align-self: stretch;
+
+            @include respond-to('screen-xs') {
+              min-height: 100px;
+
+              img {
+                @include border-top-radius(10px);
+              }
+            }
           }
 
           &-txt {
@@ -130,6 +185,7 @@
           }
 
           img {
+            position: absolute;
             display: block;
             width: 100%;
             height: 100%;
